# pyjava

./: pyproject.toml
pyjava/: __init__.py  __version__.py
tests/: test_pyjava.py
